--- a/Exercices.html
+++ b/Exercices.html
@@ -14,11 +14,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
     rel="stylesheet">
-<!--   <link rel="preload" as="image" href="assets/images/hero-banner.png">
+  <link rel="preload" as="image" href="assets/images/hero-banner.png">
   <link rel="preload" as="image" href="assets/images/hero-circle-one.png">
   <link rel="preload" as="image" href="assets/images/hero-circle-two.png">
   <link rel="preload" as="image" href="assets/images/heart-rate.svg">
-  <link rel="preload" as="image" href="assets/images/calories.svg"> -->
+  <link rel="preload" as="image" href="assets/images/calories.svg">
 
 </head>
 
@@ -61,14 +61,14 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="contact.html" class="navbar-link" data-nav-link>Contact Us</a>
           </li>
 
         </ul>
 
       </nav>
 
-      <a href="#" class="btn btn-secondary">Join Now</a>
+      <a href="contact.html" class="btn btn-secondary">Join Now</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <span class="line"></span>
@@ -139,7 +139,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Backs/back-2.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/Backs/back-5.gif" width="440" height="270" loading="lazy"
                     alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
 
                 </div>
@@ -191,7 +191,7 @@
               <div class="exercices-card">
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
-                  <img src="assets/images/GIF/Backs/back-5.gif" width="440" height="270" loading="lazy"
+                  <img src="assets/images/GIF/Backs/back-2.gif" width="440" height="270" loading="lazy"
                     alt="Risus purus namien parturient accumsan cacus" class="img-cover">
 
                 </div>
@@ -441,7 +441,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Belly/belly-1.gif" width="440" height="270" loading="lazy"
-                    alt="Going to the gym for the first time" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -466,7 +466,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Belly/belly-2.gif" width="440" height="270" loading="lazy"
-                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -492,7 +492,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Belly/belly-3.gif" width="440" height="270" loading="lazy"
-                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -518,7 +518,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Belly/belly-4.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -544,7 +544,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Belly/belly-5.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -570,7 +570,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Belly/belly-6.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -606,7 +606,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Biceps/biceps-1.gif" width="440" height="270" loading="lazy"
-                    alt="Going to the gym for the first time" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -631,7 +631,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Biceps/biceps-2.gif" width="440" height="270" loading="lazy"
-                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -657,7 +657,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Biceps/biceps-3.gif" width="440" height="270" loading="lazy"
-                    alt="Parturient accumsan cacus pulvinar magna" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -683,7 +683,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Biceps/biceps-4.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
@@ -709,7 +709,7 @@
 
                 <div class="card-banner img-holder" style="--width: 440; --height: 405;">
                   <img src="assets/images/GIF/Biceps/biceps-5.gif" width="440" height="270" loading="lazy"
-                    alt="Risus purus namien parturient accumsan cacus" class="img-cover">
+                    alt="" class="img-cover">
 
                 </div>
 
