--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Exercices for Sdr</a>
+                    <a href="#" class="card-title">Exercices for Shoolders</a>
                   </h3>
 
                   <p class="card-text">
@@ -343,7 +343,7 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Contact Us</a>
+            <a href="contact.html" class="footer-link">Contact Us</a>
           </li>
 
         </ul>
