--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
     <div class="footer-bottom">
         <p class="copyright">
-          &copy; 2024. All Rights Reserved By <a href="https://abdelilah-portfolio.vercel.app/" class="copyright-link">Abdelilah</a> Eddalili
+          &copy; 2024. All Rights Reserved By <a href="https://abdelilah-portfolio.vercel.app/" target="_blank" class="copyright-link">Abdelilah</a> Eddalili
         </p>
     </div>
 
