--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <!-- <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon> -->
-         <img src="favicon.svg" alt="">
+        <img src="favicon.svg" alt="">
         <span class="span">Fitness</span>
       </a>
 
@@ -220,8 +219,8 @@
                   </h3>
 
                   <p class="card-text">
-                    Praesent id ipsum pellentesque lectus dapibus condimentum curabitur eget risus quam. In hac
-                    habitasse platea dictumst.
+                    12 reps <br>
+                    4 series
                   </p>
 
                   <a href="Exercices.html" class="btn-link has-before">Read More</a>
