--- a/programme.html
+++ b/programme.html
@@ -263,11 +263,11 @@
           </li>
 
           <li>
-            <a href="#home" class="footer-link">Home</a>
+            <a href="index.html" class="footer-link">Home</a>
           </li>
 
           <li>
-            <a href="#about" class="footer-link">About Us</a>
+            <a href="index.html#about" class="footer-link">About Us</a>
           </li>
 
           <li>
@@ -279,7 +279,7 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Contact Us</a>
+            <a href="contact.html" class="footer-link">Contact Us</a>
           </li>
 
         </ul>
